<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="true">

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="239dp"
        android:layout_height="51dp"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:layout_marginBottom="236dp"
        android:background="#D1E0DD"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtArtistUsername"
        android:layout_width="241dp"
        android:layout_height="47dp"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="30dp"
        android:background="#D1E0DF"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="148dp"
        android:background="#696969"
        android:text="Artist Login"
        android:textColor="#E0F7FA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="165dp"
        android:layout_height="44dp"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="40dp"
        android:background="#696969"
        android:text="@string/register"
        android:textColor="#E0F7FA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="415dp"
        android:layout_height="285dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/text_tools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="423dp"
            android:layout_height="236dp"
            android:background="#E0F2F1"
            app:srcCompat="@mipmap/ic_logo_foreground" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="380dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:text="Artist Sign Up: click REGISTER"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/text_tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/login_message"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtArtistUsername"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>